--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,15 @@
   padding: 0;
 }
 
+:root {
+  /* Color Variables */
+
+  --color-nemo: #ff4a11;
+  --color-granite: #252629;
+  --color-water-10: #f3f5f9;
+  --color-foam: #ffffff;
+}
+
 body {
   background-color: limegreen;
 }
