fixed responsiveness for app under construction

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,12 @@ body {
   }
 }
 
+@media (max-width: 767px) {
+  .noapi {
+    font-size: 21px;
+  }
+}
+
 /* required styles */
 
 .leaflet-pane,
